--- a/board_project/templates/boards/article_list.html
+++ b/board_project/templates/boards/article_list.html
@@ -29,7 +29,7 @@
     </ul>
 
     {# 새 글 작성 페이지로 이동하는 링크 #}
-    <a href="{% url 'boards:article-create' board.pk %}">새 글 작성하기</a>
+    <a href="{% url 'boards:article-form' board.pk %}">새 글 작성하기</a>
 
   </div>
 {% endblock content %}
