--- a/board_project/templates/admin/base.html
+++ b/board_project/templates/admin/base.html
@@ -1,150 +1,112 @@
-{% extends 'admin/base.html' %}
-{% load i18n static suit_tags %}
+{% load i18n static %}<!DOCTYPE html>
+{% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
+<html lang="{{ LANGUAGE_CODE|default:"en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
+<head>
+  <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "admin/css/base.css" %}{% endblock %}">
+  {% if not is_popup and is_nav_sidebar_enabled %}
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/nav_sidebar.css" %}">
+    <script src="{% static 'admin/js/nav_sidebar.js' %}" defer></script>
+  {% endif %}
+  {% block extrastyle %}
+    {#  커스텀 css 추가 #}
+    <link href='{% static "suit/css/custom.css" %}' rel='stylesheet' type='text/css'>
+  {% endblock %}
+  {% if LANGUAGE_BIDI %}
+    <link rel="stylesheet" type="text/css"
+          href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}">{% endif %}
+  {% block extrahead %}{% endblock %}
+  {% block responsive %}
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/responsive.css" %}">
+    {% if LANGUAGE_BIDI %}
+      <link rel="stylesheet" type="text/css" href="{% static "admin/css/responsive_rtl.css" %}">{% endif %}
+  {% endblock %}
+  {% block blockbots %}
+    <meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
+</head>
+{% load i18n %}
 
-{% block stylesheet %}{% static "suit/css/suit.css" %}{% endblock %}
+<body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}"
+      data-admin-utc-offset="{% now "Z" %}">
 
-{% block extrastyle %}
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
-    <link href='{% static "suit/css/font-awesome.min.css" %}' rel='stylesheet' type='text/css'>
-{% endblock %}
+<!-- Container -->
+<div id="container">
 
-{% block bodyclass %}{{ block.super|suit_body_class:request }}{% endblock %}
-
-{% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
-
-{% block branding %}
-    <h1 id="site-name">
-        <a href="{% url 'admin:index' %}">
-            {{ site_header|default:_('Django administration') }}
-            <span class="header-label">{% trans 'Admin' %}</span></a>
-    </h1>
-{% endblock %}
-
-{% block pretitle %}
-<div class="content-wrap">
-    {% block messages %}
-        {% if messages %}
-            <ul class="messagelist">{% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
-            {% endfor %}</ul>
-        {% endif %}
-    {% endblock messages %}
-{% endblock %}
-
-{% block sidebar %}
-    </div> <!-- Close content-wrap -->
-{% endblock %}
-
-{% block usertools %}
-    {% if has_permission %}
-        <div id="user-tools" class="suit-user-tools">
+  {% if not is_popup %}
+    <!-- Header -->
+    <div id="header">
+      <div id="branding">
+        {% block branding %}{% endblock %}
+      </div>
+      {% block usertools %}
+        {% if has_permission %}
+          <div id="user-tools">
             {% block welcome-msg %}
-                <span class="welcome">
-                Welcome,
-                <strong>{% firstof user.get_short_name user.get_username %}</strong>.
-            </span>
+              {% translate 'Welcome,' %}
+              <strong>{% firstof user.get_short_name user.get_username %}</strong>.
             {% endblock %}
-            <div class="user-links">
             {% block userlinks %}
-                {% if site_url %}
-                    <a href="{{ site_url }}" class="icon-link view-site-link" data-title="{% trans 'View site' %}">{% trans 'View site' %}</a>
-                    <span class="separator">/</span>
-
+              {% if site_url %}
+                <a href="{{ site_url }}">{% translate 'View site' %}</a> /
+              {% endif %}
+              {% if user.is_active and user.is_staff %}
+                {% url 'django-admindocs-docroot' as docsroot %}
+                {% if docsroot %}
+                  <a href="{{ docsroot }}">{% translate 'Documentation' %}</a> /
                 {% endif %}
-                {% if user.is_active and user.is_staff %}
-                    {% url 'django-admindocs-docroot' as docsroot %}
-                    {% if docsroot %}
-                        <a href="{{ docsroot }}" class="icon-link documentation-link" data-title="{% trans 'Documentation' %}">{% trans 'Documentation' %}</a>
-                        <span class="separator">/</span>
-                    {% endif %}
-                {% endif %}
-                {% if user.has_usable_password %}
-                    <a href="{% url 'admin:password_change' %}" class="icon-link change-password-link" data-title="{% trans 'Change password' %}">{% trans 'Change password' %}</a>
-                    <span class="separator">/</span>
-                {% endif %}
-                <a href="{% url 'admin:logout' %}" class="icon-link logout-link" data-title="{% trans 'Log out' %}">{% trans 'Log out' %}</a>
+              {% endif %}
+              {% if user.has_usable_password %}
+                <a href="{% url 'admin:password_change' %}">{% translate 'Change password' %}</a> /
+              {% endif %}
+              <a href="{% url 'admin:logout' %}">{% translate 'Log out' %}</a>
             {% endblock %}
-            </div>
-        </div>
+          </div>
+        {% endif %}
+      {% endblock %}
+      {% block nav-global %}{% endblock %}
+    </div>
+    <!-- END Header -->
+    {% block breadcrumbs %}
+      <div class="breadcrumbs">
+        <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
+        {% if title %} &rsaquo; {{ title }}{% endif %}
+      </div>
+    {% endblock %}
+  {% endif %}
+
+  <div class="main shifted" id="main">
+    {% if not is_popup and is_nav_sidebar_enabled %}
+      {% block nav-sidebar %}
+        {% include "admin/nav_sidebar.html" %}
+      {% endblock %}
     {% endif %}
-{% endblock %}
-
-{% block nav-global %}
-    {% include 'suit/menu.html' %}
-{% endblock %}
-
-{% block footer %}
-{#    </div> <!-- Put footer outside #container -->#}
-    {% if not is_popup %}
-        <div id="footer">
-        <footer class="footer">
-            <div class="container-fluid">
-                {% block footer_content %}
-                    <div class="row">
-
-                        <div class="col-xs-12 col-sm-3 footer-links">
-                            {% block footer_links %}
-                                <a href="http://djangosuit.com/support/" target="_blank">Support</a>
-                                <a href="http://djangosuit.com/pricing/" target="_blank">Licence</a>
-                                <a href="http://github.com/darklow/django-suit/issues" target="_blank">Report a bug</a>
-                            {% endblock %}
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6 text-sm-center footer-copyright">
-                            {% block copyright %}
-                                Copyright &copy;
-                                <span class="hidden-md-down">2013-</span>{% now "Y" %} DjangoSuit.com
-                                <br>Developed by
-                                <a href="http://djangosuit.com" target="_blank">DjangoSuit.com</a>
-                            {% endblock %}
-                        </div>
-
-                        <div class="col-xs-12 col-sm-3 text-sm-right footer-version">
-                            {% block footer_branding %}
-                                {% with admin_name=site_header|default:_('Django administration') django_version='django_version'|suit_conf:request %}
-                                    {{ admin_name }}
-                                    {% if admin_name == 'Django Suit' %}
-                                        <span style="font-size: 12px">
-                                            {{ 'version'|suit_conf:request }}<br/>
-                                            Django {{ django_version }}
-                                        </span>
-                                    {% endif %}
-                                {% endwith %}
-                            {% endblock %}
-                        </div>
-
-                    </div>
-                {% endblock %}
-            </div>
-        </footer>
-    {% endif %}
-
-{#    {{ block.super }}#}
-    <script src="{% static "suit/js/suit.js" %}"></script>
-    {% if cl.formset or action_form and 'toggle_changelist_top_actions'|suit_conf:request %}
-        <script type="text/javascript">
-            Suit.ListActionsToggle.init();
-        </script>
-    {% elif adminform %}
-        <script type="text/javascript">
-
-            Suit.$("#{{ opts.model_name }}_form").suitFormDebounce();
-
-            {% if 'form_submit_on_right'|suit_conf:request %}
-                Suit.FixedBar.init();
-            {% endif %}
-
-            {% if adminform.model_admin.suit_form_tabs %}
-                Suit.$(function () {
-                    Suit.$('#suit_form_tabs').suitFormTabs();
-                });
-            {% endif %}
-
-{#            {% if 'layout'|suit_conf:request.current_app == 'vertical' %}#}
-{#                Suit.$('#content').prepend(Suit.$('.breadcrumbs'));#}
-{#            {% endif %}#}
-        </script>
-    {% endif %}
-
-{#    <div> <!-- Fix/close div previously closed by footer -->#}
-{% endblock %}
+    <div class="content">
+      {% block messages %}
+        {% if messages %}
+          <ul class="messagelist">{% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
+          {% endfor %}</ul>
+        {% endif %}
+      {% endblock messages %}
+      <!-- Content -->
+      <div id="content" class="{% block coltype %}colM{% endblock %}">
+        {% block pretitle %}{% endblock %}
+        {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+        {% block content_subtitle %}{% if subtitle %}<h2>{{ subtitle }}</h2>{% endif %}{% endblock %}
+        {% block content %}
+          {% block object-tools %}{% endblock %}
+          {{ content }}
+        {% endblock %}
+        {% block sidebar %}{% endblock %}
+        <br class="clear">
+      </div>
+      <!-- END Content -->
+      {% block footer %}
+        <div id="footer"></div>{% endblock %}
+    </div>
+  </div>
+</div>
+<!-- END Container -->
+</body>
+</html>
